Added multiple deck feature

--- a/notion_sync_addon/config.json
+++ b/notion_sync_addon/config.json
@@ -1,8 +1,23 @@
 {
   "debug": false,
   "sync_every_minutes": 30,
-  "anki_target_deck": "Notion Sync",
+  "anki_target_deck": "Default deck",
   "notion_token": "",
   "notion_namespace": "",
-  "notion_pages": [{"page_id": "ID", "recursive": true}]
+  "notion_pages": [
+    {
+      "page_id": "page-id-1",
+      "recursive": false,
+      "target_deck": "deck01"
+    },
+    {
+      "page_id": "page-id-2",
+      "recursive": true,
+      "target_deck": "deck02"
+    },
+    {
+      "page_id": "page_id3",
+      "recursive": true
+    }
+  ]
 }
